* Update OpenConfig gnmi telemetry groovy script with more examples (Issue https://opennms.atlassian.net/browse/NMS-18060[NMS-18060])
* Merge 'Vendor neutral performance metrics via IPFIX' to develop (Issue https://opennms.atlassian.net/browse/NMS-18062[NMS-18062])
* FE: Add actions to reset the columns config and filters (Issue https://opennms.atlassian.net/browse/NMS-18203[NMS-18203])

=== Task

* Update to Netty 4 (Issue https://opennms.atlassian.net/browse/NMS-16184[NMS-16184])
* Replace babel/polyfill with core-js 3 (Issue https://opennms.atlassian.net/browse/NMS-16477[NMS-16477])
* Update dnsjava to version 3.6.0 if applicable (Issue https://opennms.atlassian.net/browse/NMS-16506[NMS-16506])
* Horizon passwordGate changes to make compatible with Meridian fixes (Issue https://opennms.atlassian.net/browse/NMS-16508[NMS-16508])
* FE: Dependabot updates for OpenNMS UI September 2024 (Issue https://opennms.atlassian.net/browse/NMS-16553[NMS-16553])
* Include nodeParentId in Rest API V2 returns for Node (Issue https://opennms.atlassian.net/browse/NMS-16571[NMS-16571])
* Include node parent id in opennms-js Node DAO (Issue https://opennms.atlassian.net/browse/NMS-16939[NMS-16939])
* System Check Utility : Basic Collection (Issue https://opennms.atlassian.net/browse/NMS-16986[NMS-16986])
* Initial Set of Data to Collect: Usage Stats (Issue https://opennms.atlassian.net/browse/NMS-16987[NMS-16987])
* FE: System Check Utility : Grouping of System Report at front end. (Issue https://opennms.atlassian.net/browse/NMS-17002[NMS-17002])
* Update the login events item in Usage Stats, add link to download CSV file (Issue https://opennms.atlassian.net/browse/NMS-17004[NMS-17004])
* Add a node count per sysOID to the system report bundle (Issue https://opennms.atlassian.net/browse/NMS-17076[NMS-17076])
* Add User Logins reports to the system report bundle. (Issue https://opennms.atlassian.net/browse/NMS-17079[NMS-17079])